# ctorch

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: arena.h  ctorch.h  errors.h  keras.h  ops.h  randn.h  tensor.h  vector.h
src/: ctorch.c  errors.c  keras.c  ops.c  tensor.c  vector.c
